--- a/WeatherBlazorApp1/appsettings.Development.json
+++ b/WeatherBlazorApp1/appsettings.Development.json
@@ -1,8 +1,10 @@
 {
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+      "LogLevel": {
+          "Default": "Information",
+          "Microsoft.AspNetCore": "Warning"
+      }
+  },
+  "AllowedHosts": "*",
+  "OpenWeatherUrl": ""
 }
